--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "astro-dcos",
+  "name": "axelar-docs",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -12,11 +12,32 @@
   "dependencies": {
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/react": "^2.2.1",
+    "@headlessui/react": "^1.7.2",
+    "@material-tailwind/react": "^1.2.4",
+    "@reach/skip-nav": "^0.17.0",
+    "@redux-devtools/extension": "^3.2.3",
+    "@typeform/embed-react": "^1.21.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "astro": "^2.7.0",
+    "lodash": "^4.17.21",
+    "markdown-to-jsx": "^7.1.7",
+    "next": "^12.3.1",
+    "next-secure-headers": "^2.2.0",
+    "nextra": "^2.2.19",
+    "nextra-theme-docs": "^2.2.19",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^15.0.0",
+    "postcss-preset-env": "^7.8.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.63.6"
+    "react-icons": "^4.4.0",
+    "react-redux": "^8.1.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "redux": "^4.2.1",
+    "remark-toc": "^8.0.1",
+    "sass": "^1.63.6",
+    "web3": "^1.8.0"
   }
 }
