--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "astro": "^2.7.0",
+    "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.7",
     "next": "^12.3.1",
@@ -37,6 +38,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "redux": "^4.2.1",
     "remark-toc": "^8.0.1",
+    "remove-markdown": "^0.5.0",
     "sass": "^1.63.6",
     "web3": "^1.8.0"
   }
