--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@astrojs/mdx": "^0.19.7",
     "@astrojs/react": "^2.2.1",
     "@headlessui/react": "^1.7.2",
-    "@material-tailwind/react": "^1.2.4",
-    "@reach/skip-nav": "^0.17.0",
+    "@material-tailwind/react": "^2.0.4",
     "@redux-devtools/extension": "^3.2.3",
     "@typeform/embed-react": "^1.21.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
+    "algoliasearch": "^4.18.0",
     "astro": "^2.7.0",
     "gray-matter": "^4.0.3",
+    "instantsearch.js": "^4.56.4",
     "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.7",
     "next": "^12.3.1",
